--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="glass-container1">
                     <h1 style="font-size: 45px; text-align:center;">Members</h1>
                     
-                        <ul style="list-style-type:none;">
+                        <ul style="list-style-type:none;font-weight: bold;">
                             <li>Kirthiga shree I.S- 921522104016 NMID:aut921522CS06</li>
                             <li> Preethi p-921522104017</li>
                             <li>Madhu bala A-921522104021</li>
@@ -236,8 +236,7 @@
             <center>
                 <h1 class="anah11">analysis Report</h1>
 
-                <h1 style="font-size: 40px;font-family:'Times New Roman', Times, serif;">Title : Data Analytics-Project Development-Assessing 
-                    Healthcare Disparities in the United States</h1>
+                <h1 style="font-size: 40px;font-family:'Times New Roman', Times, serif;">Title : Natural disaster risk and developing mitigration strategies data analytics project development analyzing </h1>
             </center>
 
             
